# TensorRT-RollPugin

./: CMakeLists.txt  README.md  main.cpp  roll.cu  roll.h  utilsn.h
